# grokchat

./: .gitignore  Cargo.toml  README.md
mobile/: App.js  JSON_CONFIG_COMMENTS.ru.md  README.md  app.json  index.js  package-lock.json  package.json
mobile-libp2p/: ARCHITECTURE.md  BRIDGE_CONTRACT.md  README.md
mobile-libp2p/core/: Cargo.toml
mobile-libp2p/core/src/: lib.rs
src/: api_types.rs  app.rs  config.rs  gateway.rs  handlers.rs  logging.rs  main.rs  p2p.rs  sync.rs
