[package]
name = "grokchat-mobile-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "grokchat_mobile_core"
crate-type = ["rlib"]

[dependencies]
libp2p = { version = "0.53.2", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "kad", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
